# get_next_line

./: .get_next_line.c.swp  CMakeLists.txt  a.out  get_next_line.c  get_next_line.h  get_next_line.h.gch  get_next_line_bonus.c  get_next_line_utils.c  get_next_line_utils_bonus.c  main.c  test.txt
a.out.dSYM/Contents/Resources/DWARF/: a.out
